<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".MovieDetailActivity"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movieDetailPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/moviePoster"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/movie_title"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <TextView
             android:id="@+id/movie_overview_title"
             android:layout_marginTop="10dp"
             android:layout_below="@id/movie_title"
             android:text="@string/movie_overview"
             android:layout_width="match_parent"
             android:textColor="@color/colorAccent"
             android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movie_overview"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_below="@id/movie_overview_title"
                android:text="@android:string/untitled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/movie_releasedate_title"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_below="@id/movie_overview"
                android:text="@string/movie_relasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/movie_releasedate"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/movie_releasedate_title"
                android:layout_alignBottom="@id/movie_releasedate_title"
                android:text="@android:string/untitled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/movie_rating_title"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_below="@id/movie_releasedate"
                android:text="@string/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/movie_rating"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/movie_rating_title"
                android:layout_alignBottom="@id/movie_rating_title"
                android:text="@android:string/untitled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/movie_trailers_title"
                android:text="@string/movie_trailers"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorAccent"
                android:layout_below="@id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videos_recyclerview"
                android:layout_marginTop="10dp"
                android:layout_below="@id/movie_trailers_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/no_trailers_title"
                android:visibility="gone"
                android:textSize="12dp"
                android:text="No Trailers"
                android:gravity="center"
                android:textColor="@color/lightGray"
                android:layout_below="@id/videos_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/movie_reviews_title"
                android:layout_below="@id/videos_recyclerview"
                android:textColor="@color/colorAccent"
                android:text="@string/movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews_recyclerview"
                android:layout_marginTop="10dp"
                android:layout_below="@id/movie_reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/no_reviews_title"
                android:visibility="gone"
                android:textSize="12dp"
                android:text="No Reviews"
                android:layout_below="@id/reviews_recyclerview"
                android:textColor="@color/lightGray"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>




    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        app:borderWidth="0dp"
        android:scaleType="center"
        app:tint="@null"
        android:backgroundTint="@color/pitchBlack"
        android:src="@drawable/love_off"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>